# eagle2svg

./: .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: hide-old-bot-comments.yml  release.yml  test.yml
eagle2svg/: eagle_element.py  eagle_parser.py  eagle_types.py  render.py  svg_common.py
scripts/: eagle2svg
tests/: coding-style.sh  exec-test.sh
tests/data/: test.brd  test.sch
